# AppFlowy-Supabase

./: .gitignore  Cargo.toml  README.md
.github/workflows/: migration.yml  supabase_migration.yml
postgres/: Cargo.toml  README.md
postgres/benches/: af_collab_update.rs
postgres/docs/: schema.plantuml
postgres/migrations/: Dockerfile  README.md  V1__initial.down.sql  V1__initial.up.sql  V1__initial_up.sql  V2__realtime.down.sql  V2__realtime_up.sql  V3__awareness.down.sql  V3__awareness.sql  V4__encryption.down.sql  V4__encryption.sql  V5__replica.down.sql  V5__replica.sql
postgres/migrations_tests/: af_collab_update  af_user  af_user_update
postgres/src/: entities.rs  main.rs  migration.rs  sql_ops.rs
postgres/src/migrations/initial/: V1__Initial_Up.sql
postgres/tests/: README.md  af_collab_update
realtime/: Cargo.toml
src/: migration.rs
