[package]
name = "appflowy-supabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1","with-chrono-0_4"] }
deadpool-postgres = "0.10.5"
refinery= { version = "0.8.10", features = ["tokio-postgres"] }
futures = "0.3.26"
dotenv = "0.15.0"
tokio = { version = "1.26", features = ["sync"]}
anyhow = "1.0.72"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "af_collab_update"
harness = false
